--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bài 1</title>
-</head>
-<body>
-    <h1>Hiển thị bài 1</h1>
-</body>
+  </head>
+  <body>
+    <h1>Trên tình bạn dưới tình yêu =)))</h1>
+    <h2>hỏi chấm hỏi chấm hỏi chấm</h2>
+  </body>
 </html>
